# ARDrone

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.sh
docs/: Bibliography.txt  SomeText.txt  TermPaper.md
include/: HelperMath.hh  Locator.cc
models/aruco_diamond1234/: model.config  model.sdf
models/aruco_diamond1234/materials/scripts/: armark.material
models/quadrotor/: model.config  model.sdf
src/: CMakeLists.txt
src/CameraSingleMarker/: CMakeLists.txt  camera_location.cc  camera_location_api.cc  marker_location.cc
src/CameraSingleMarkerAnimation/: CMakeLists.txt  CameraLocator.hh  camera_location.cc
src/DroneStabilizationManual/: CMakeLists.txt  stabilization.cc
src/FollowTrajectory/: CMakeLists.txt  follow_global.cc
src/GenerateDiamondMaterial/: CMakeLists.txt  generate_diamond_material.cc
src/MultipleMarkers/: CMakeLists.txt  markers_avg.cc
src/plugins/: CMakeLists.txt
src/plugins/ModelForceTorque/: CMakeLists.txt  model_force_torque.cc  model_force_torque.hh
src/plugins/ModelLocation/: .model_location.cc.swp  .model_location.hh.swp  CMakeLists.txt  model_location.cc  model_location.hh
utils/: length-err.dem  real-estimated.dem
worlds/: .CameraMarkerLocationSimple.world.swp  3Diamonds.world  CameraMarkerLocation.world  CameraMarkerLocationSimple.world  CameraMarkerLocationSimpler.world  JustQuad.world  QuadMultipleMarkersGround.world  QuadMultipleMarkersGround.world.erb
worlds/test/: model_location.world
